# MeshSimplification

./: CMakeLists.txt
src/: BaseModel.cpp  BaseModel.h  BasicDataType.h  Edge.cpp  Edge.h  EdgeHeap.cpp  EdgeHeap.h  Face.cpp  Face.h  Heap.cpp  Heap.h  ValidPair.cpp  ValidPair.h  ValidPairHeap.cpp  ValidPairHeap.h  Vertex.cpp  Vertex.h  main.cpp  simplification.cpp  simplification.h
